--- a/app/panels/custom_templates/style.css
+++ b/app/panels/custom_templates/style.css
@@ -2,12 +2,12 @@
         
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 44px;
     margin: 0;
 }
 #custom_templates_main{
 
-padding-top: 44px;
+padding-top: 0px;
 }
 #custom_templates_header  {
     margin: 10px 20px;
@@ -16,9 +16,9 @@ padding-top: 44px;
 }
 #custom_templates_header #h_search {
     position: absolute;
-    width: calc(100% - 115px);
+    width: calc(100% - 123px);
     margin-top: 0px;
-
+    left: 10px;
     z-index: 400;
 
 }
@@ -33,8 +33,8 @@ border: 2px solid var(--border-color);
 color: var(--input-text);
 border-radius: 5px;
 float: right;
-position: absolute;
-margin: 2px 2px 2px 8px;
+position: relative;
+margin: 3px 2px 2px 8px;
 cursor: pointer;
 }
 
